test-utils/derive/tests/missing-func-parameter.stderr
error: the test function accepts only one argument of type sc_service::TaskExecutor
 --> $DIR/missing-func-parameter.rs:2:1
  |
2 | async fn missing_func_parameter() {
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
